--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.username =sa
 spring.datasource.password =
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 spring.h2.console.enabled=true
+
+### MANAGEMENT HTTP SERVER (ManagementServerProperties)
+## http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#production-ready-customizing-management-server-context-path:
+## The http context-path of the Spring Actuator http endpoints.
+management.context-path=/manage
