fix management path

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,7 @@ spring.h2.console.enabled=true
 ### MANAGEMENT HTTP SERVER (ManagementServerProperties)
 ## http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#production-ready-customizing-management-server-context-path:
 ## The http context-path of the Spring Actuator http endpoints.
-management.context-path=/manage
+### MANAGEMENT HTTP SERVER (ManagementServerProperties)
+## http://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#production-ready-customizing-management-server-context-path:
+## The http context-path of the Spring Actuator http endpoints.
+management.endpoints.web.base-path=/manage
